# vulkan-guide-modern

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: gradient_color_slang.slang  gradient_slang.slang  gradient_slang.slang.spv
src/: CMakeLists.txt  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
